# microservices_cpp_tutorial

./: CMakeLists.txt
ansible/: 01_install_env.yml  install_environment.sh
ansible/group_vars/all/: main.yml
ansible/inventory/: localhost.yml
ansible/roles/env.common.installed/tasks/: main.yml
ansible/roles/env.dev.installed/tasks/: install_apache_thrift_lib.yml  install_boost_lib.yml  install_cmake.yml  install_toolchain.yml  main.yml  recreate_tmp_dir.yml
calculator_client/: CMakeLists.txt  main.cpp
calculator_server/: CMakeLists.txt
calculator_server/lib_calculator_api/: CMakeLists.txt  lib_calculator_api.thrift
calculator_server/server/: CMakeLists.txt
calculator_server/server/src/: main.cpp
